--- a/shop/clothing/index.html
+++ b/shop/clothing/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>El mejor aceite de CBD en Costa Rica - Herbalist</title>
-    <meta name="description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
+    <title>420 Clothing - Herbalist Smoke Shop</title>
+    <meta name="description" content="Ropa 420 de cannabis única de diseñadores independientes de Herbalist Smoke Shop. Compra en línea camisetas, tops, sudaderas, vestidos, gorras y más." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="El mejor aceite de CBD en Costa Rica - Herbalist" />
+    <meta property="og:title" content="420 Clothing - Herbalist Smoke Shop" />
     <meta property="og:description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -543,13 +543,13 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>El mejor aceite de CBD en Costa Rica</h1></div>
+                                                <div class="et_pb_text_inner"><h1>¿Cannabis en tu ropa? No, no es un chiste</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información.
+                                                        La tela de cáñamo popular por los chinos de la edad media e incluso con Cleopatra, está teniendo un nuevo momento de moda. Y no solo con los rastafaris modernos. ¡Ahora en Herbalist Smoke Shop puedes comprar camisetas, abrigos e incluso sábanas y almohadas hechas de cannabis.
                                                 </h4>
                                                 </div>
                                             </div>
@@ -659,62 +659,7 @@
 
                                     </div>
 
-                                 
-
-                                    <div class="et_pb_row">
-                                        <div class="section collection_description">
-
-                                            <h2>¿Qué es el CDB?</h2>
-
-                                            <p>Con más y más estados que legalizan la marihuana, muchas personas comienzan a preguntarse cuál es la diferencia real entre el CBD y el THC. Para saber la diferencia, es clave comprender cómo afecta exactamente cada uno al cuerpo. En el corazón de esto hay una vía biológica llamada Sistema Endocannabinoide (SEC) que regula el estado de ánimo, el apetito, la memoria y la sensación de dolor.</p>
-                                            <h2>CBD vs a THC</h2>
-
-
-                                            <p>Entonces, ¿qué significa CBD de todos modos? Encontrado en la marihuana y el cáñamo, CBD significa cannabidiol, que es un compuesto químico que no produce el subidón asociado con el THC. Aunque las estructuras químicas del CBD y el THC parecen casi idénticas (incluso con la misma fórmula molecular), el THC contiene un anillo cíclico, mientras que el CBD contiene un grupo hidroxilo. Esta pequeña diferencia es lo que explica si te sientes colocado o no a través del sistema endocannabinoide.</p>
-                                            <h2>¿Cómo funciona el CDB?</h2>
-
-
-                                            <p>Para aclarar, cuando está sobrio, el receptor CB1 en el cuerpo se ve afectado por un neurotransmisor llamado anandamida. La anandamida controla el placer, la alimentación y la motivación, y también es responsable de lo que llamamos "subidón del corredor". Dado que el THC encaja perfectamente en este receptor, proporciona a sus consumidores una sensación de subidón. Sin embargo, el CBD no encaja correctamente debido a su grupo hidroxilo, por lo que no produce los mismos efectos psicoactivos eufóricos, sino que interactúa con otros neurotransmisores para proporcionar una gran cantidad de beneficios.</p>
-                                            <h2>Beneficios del CDB</h2>
-
-
-                                            <p>Se ha descubierto que el CBD ayuda con numerosos trastornos de salud, como dolor, insomnio, acné, epilepsia, esclerosis múltiple, quimioterapia, cáncer e incluso algunas enfermedades intestinales y cardiovasculares, ya sea reduciendo la inflamación, los síntomas o incluso ralentizando la progresión de la enfermedad por completo.< /p>
-                                            <h3>Dolor</h3>
-                                            <p>Uno de los beneficios para la salud más comunes del CBD es ayudar a aliviar el dolor. El CBD hace esto uniéndose a los receptores de cannabinoides en su cuerpo para reducir la inflamación. Se está volviendo especialmente popular como alternativa natural viable a los opiáceos, ya que no aumenta la sensibilidad al dolor con el tiempo, uno de los aspectos más prometedores del aceite de CBD.</p>
-                                            <h3>Ansiedad</h3>
-                                            <p>La ansiedad es un gran problema que se está volviendo más frecuente en un mundo en constante cambio. Afortunadamente, el CBD parece ayudar con el estrés y la ansiedad, incluida la ansiedad generalizada, el trastorno de pánico, el TEPT y el TOC. Junella Chin, médica osteópata y experta en el campo del cannabis, dice que “[CBD] le dice a tu cuerpo que se calme y te recuerda que estás a salvo. Suaviza el sistema nervioso para que no tengas una mayor respuesta de huida o lucha”. Dicho esto, puede brindarle una mayor sensación de tranquilidad para que pueda ser una persona más feliz y saludable. Y aunque es posible que el CBD no elimine su ansiedad por completo, puede ayudarlo a controlarla en gran medida.</p>
-                                            <h3>Depresión</h3>
-                                            <p>Los sentimientos de ansiedad suelen coincidir con la depresión y, a partir de enero de 2020, se ha dicho que 264 millones de personas sufren de depresión. Si bien la terapia, la medicación y los ajustes en el estilo de vida pueden marcar una gran diferencia, las personas buscan remedios más naturales como el CBD. Curiosamente, el CBD también actúa sobre los receptores cerebrales de serotonina, por lo que está demostrando ser especialmente prometedor. Sin embargo, se necesita más investigación y no debe tomarse en lugar de la medicación recetada por un médico.</p>
-                                            <h3>Epilepsia</h3>
-                                            <p>Charlotte's Web CBD es una variedad de cáñamo que lleva el nombre de Charlotte Figi, cuya madre buscaba un tratamiento natural no intoxicante para las convulsiones crónicas de su hija. Espectacularmente, el CBD ayudó a reducir las convulsiones de Charlotte de 300 por semana a 2-3 por semana. El productor que originalmente ayudó a la familia Figi creó Charlotte's Web en su honor y produce aceites de CBD que van más allá de la epilepsia para promover el enfoque, aliviar el estrés, promover un sueño saludable y la inflamación posterior al entrenamiento.</p>
-                                            <h2>Productos de CBD</h2>
-
-
-                                            <p>Existen innumerables productos de CBD que pueden ayudar con las dolencias antes mencionadas o simplemente ayudarlo a vivir un estilo de vida más saludable, naturalmente. El CBD viene en muchas formas, incluidos aceites, tinturas, gomitas, píldoras, cápsulas, parches, cápsulas de gel, lociones corporales, ungüentos, bombas de baño, bálsamos labiales, chocolate, incluso mascarillas faciales y la lista continúa. También puede encontrar CBD por necesidad específica, como CBD para dormir, recuperación muscular o ansiedad. Estos son algunos de los mejores productos de CBD por categoría.</p>
-                                            <h3>Aceite de cáñamo CBD</h3>
-                                            <p>Aceite de CBD de Vesl: el aceite de CBD puro sin sabor de Vesl tiene 0 % de THC, +99 % de aislado de CBD, por lo que es perfecto si desea una dosis moderada con resultados rápidos. Es un aceite de cáñamo CBD especialmente bueno para el dolor.</p>
-                                            <h3>Tintura de CBD</h3>
-                                            <p>Tintura de CBD de cáñamo original: este aceite de cáñamo de espectro completo con terpenos de mirceno y limoneno tiene un sabor a bayas increíblemente refrescante. Como una de las mejores tinturas de CBD para la ansiedad, seguramente calmará tu mente, al mismo tiempo que mejora el sueño y la inflamación.</p>
-                                            <p>Tintura de CBD de Funky Farms: esta tintura de aceite de CBD viene en un vigorizante sueño de Alaskan Ice, Lemon Limon y Orange para que te sientas igualmente lleno de energía y relajado.</p>
-                                            <h3>Gomitas de CBD</h3>
-                                            <p>Gomitas de CBD Hemplucid: estas gomitas de CBD de espectro completo calmarán su cuerpo y lo ayudarán a relajarse cuando el día llegue a su fin. Son ampliamente considerados como una de las mejores gomitas de CBD para dormir. ¡Esperemos que hagan más sabores!</p>
-                                            <p>Gomitas agrias vivas de CBD: te encantará esta variedad de sabores afrutados que incluyen manzana, cereza, limón, naranja y piña. Estas nanogomitas de amplio espectro son perfectas si quieres un pequeño empujón para comenzar tu día.</p>
-                                            <p>Gomitas de CBD veganas: si lo que te gusta son los ingredientes orgánicos y naturales, estos ositos de gominola de CBD derivados del cáñamo que están a la venta son perfectos para ti. Son tan lindos y también te encantará la combinación equilibrada de sabores afrutados.</p>
-                                            <h3>CBD para gatos</h3>
-                                            <p>Hemplucid Pets Organic Full Spectrum CBD - ¿Tu gato se ha comportado de forma extraña últimamente o simplemente tan espasmódico como siempre? Bueno, este CBD orgánico de espectro completo para gatos hecho con aceite de pescado nutritivo puede ayudar a calmar a tu amigo peludo. Se puede administrar por vía oral o con alimentos en caso de que esté un poco quisquilloso, ¡así nunca sabrá qué lo golpeó!</p>
-                                            <h3>Aislado de CBD</h3>
-                                            <p>Aislado de CBD de Hemplucid: esta fórmula soluble en agua de acción rápida es una combinación de aislado de CBD y terpenos naturales de cáñamo. Este aislado de CBD a la venta se mezcla fácilmente con bebidas y no tiene THC.</p>
-                                            <h3>Pluma vaporizadora de CBD</h3>
-                                            <p>Vesl Oils Olah CBD Oil Vape Pen: este kit básico de pluma de vaporizador de CBD sin THC y sin disolventes es posiblemente el más saludable del mercado, hecho 100 % de cerámica de grado médico y sin metales pesados.</p>
-                                            <h3>Aceite de CBG</h3>
-                                            <p>Vesl Cápsulas de aceite de CBG: en primer lugar, es posible que se pregunte qué es el aceite de CBG. CBG significa cannabigerol, un cannabinoide que, como el CBD, no produce un subidón. Las primeras investigaciones sobre los beneficios del aceite de CBG han demostrado que ayuda con ciertas disfunciones de la vejiga, glaucoma, infecciones bacterianas, cáncer y pérdida de apetito. Este aceite de CBG a la venta es fácil, efectivo y perfecto para llevar en forma de cápsula.</p>
-                                            <h3>Aceite CBN</h3>
-                                            <p>CBN (cannabinol) es otro cannabinoide que ha demostrado ser neuroprotector, antiinflamatorio, antibacteriano y sedante. Por esto y mucho más, quizás no sea de extrañar que se esté volviendo cada vez más popular. Ya sea que esté buscando aceite de CBN o cápsulas de CBN, ha venido al lugar correcto, especialmente si está buscando una buena noche de sueño.</p>
-                                            <h2>Otros productos de CBD</h2>
-
-
-                                            También hay parches de CBD para el dolor, cápsulas de CBD, masticables suaves de CBD, tés de CBD, ungüentos de CBD, lociones corporales de CBD, bombas de baño de CBD y productos más innovadores que salen al mercado todos los días. Elija lo que mejor se adapte a su estilo de vida y sea más relajante para usted. Si bien los aceites y tinturas de CBD son, con mucho, el método de consumo más común, estos otros productos se están volviendo cada vez más populares. Imagínese tomando un baño de burbujas con su nueva bomba de baño con un té con infusión de CBD en la mano, y luego siga con una loción de CBD. Realmente depende de usted lo que prefiera, ¡pero las opciones son infinitas!</div>
-                                    </div>
+                                
 
 
 
