--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>El mejor aceite de CBD en Costa Rica - Herbalist</title>
+    <title>El mejor aceite de CBD en Costa Rica - Herbalist Smoke Shop</title>
     <meta name="description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="El mejor aceite de CBD en Costa Rica - Herbalist" />
+    <meta property="og:title" content="El mejor aceite de CBD en Costa Rica - Herbalist Smoke Shop" />
     <meta property="og:description" content="Descubra nuestros productos de CBD Premium sin THC. Con aceite de cáñamo galardonado y de alta calidad. Siente y prueba la diferencia. Visítenos para más información." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/cbd/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
