--- a/shop/clothing/index.html
+++ b/shop/clothing/index.html
@@ -549,7 +549,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda. <br>
+                                                        La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda. <br><br>
 
                                                        Esta tela de cáñamo popular por los chinos de la edad media e incluso con Cleopatra, está teniendo un nuevo momento de moda. Y no solo con los rastafaris modernos. ¡Ahora en Herbalist Smoke Shop puedes comprar camisetas, abrigos e incluso sábanas y almohadas hechas de cannabis.
                                                 </h4>
