--- a/shop/clothing/index.html
+++ b/shop/clothing/index.html
@@ -543,13 +543,14 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>¿Cannabis en tu ropa? No, no es un chiste</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Ropa 420</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda. <br><br>
+                                                        La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda. 
+                                                        <br><br>
 
                                                        Esta tela de cáñamo popular por los chinos de la edad media e incluso con Cleopatra, está teniendo un nuevo momento de moda. Y no solo con los rastafaris modernos. ¡Ahora en Herbalist Smoke Shop puedes comprar camisetas, abrigos e incluso sábanas y almohadas hechas de cannabis.
                                                 </h4>
@@ -570,7 +571,7 @@
                                                 <div class="et_pb_blurb_content">
                                                     <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772 lazyload" data-src="https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 300w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1024w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 150w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 768w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1536w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1080w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1280w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 980w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png" alt="" srcset="https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1920w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 300w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1024w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 150w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 768w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1536w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1080w, https://www.herbalist.ml/img/products/cbd/7a6ab3ea3057816.png 1280w, https://www.herbalist.ml/img/products/cbd/96dc0243507892.png 980w, https://www.herbalist.ml/img/products/cbd/96dc0243507892.png 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772" data-eio="l" /></noscript></span></div>
                                                     <div class="et_pb_blurb_container">
-                                                        <h2 class="et_pb_module_header"><span>CBD Aceite 300 MG NATURAL 30 ML</span></h2>
+                                                        <h2 class="et_pb_module_header"><span>SUDADERA "LET'S GET BAKED" </span></h2>
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price">Espectro completo</p>
