--- a/shop/clothing/index.html
+++ b/shop/clothing/index.html
@@ -552,7 +552,7 @@
                                                         La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda. 
                                                         <br><br>
 
-                                                       Esta tela de cáñamo popular por los chinos de la edad media e incluso con Cleopatra, está teniendo un nuevo momento de moda. Y no solo con los rastafaris modernos. ¡Ahora en Herbalist Smoke Shop puedes comprar camisetas, abrigos e incluso sábanas y almohadas hechas de cannabis.
+                                                       Esta tela de cáñamo popular por los chinos de la edad media e incluso por Cleopatra, está teniendo un nuevo momento de moda. Y no solo con los rastafaris modernos. ¡Ahora en Herbalist Smoke Shop puedes comprar camisetas, abrigos e incluso sábanas y almohadas hechas de cannabis.
                                                 </h4>
                                                 </div>
                                             </div>
