--- a/shop/clothing/index.html
+++ b/shop/clothing/index.html
@@ -663,7 +663,119 @@
 
 
 
+
+
+
+
+
+                                    
+                                    <div class="et_pb_row et_pb_row_2 et_pb_row_4col">
+                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
+
+
+                                            <div class="et_pb_module et_pb_blurb et_pb_blurb_0  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                                <div class="et_pb_blurb_content">
+                                                    <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg" alt="" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772 lazyautosizes ls-is-cached lazyloaded et-animated" data-src="https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 300w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1024w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 150w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 768w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1536w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1080w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1280w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 980w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 480w" data-sizes="auto" sizes="261px" srcset="https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 300w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1024w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 150w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 768w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1536w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1080w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1280w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 980w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 480w"><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1920w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 300w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1024w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 150w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 768w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1536w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1080w, https://www.herbalist.ml/img/products/pipas/herbalist-pipe.jpg 1280w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 980w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772" data-eio="l" /></noscript></span></div>
+                                                    <div class="et_pb_blurb_container">
+                                                        <h2 class="et_pb_module_header"><span>HERBALIST PIPA</span></h2>
+
+                                                        <div class="et_pb_blurb_description">
+                                                            <p class="custom-btn-price"><strong>$6.000</strong></p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50670408383/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough">
+
+
+                                        <div class="et_pb_module et_pb_blurb et_pb_blurb_1  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                            <div class="et_pb_blurb_content">
+                                                <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg" alt="" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828 lazyautosizes ls-is-cached lazyloaded et-animated" data-src="https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1920w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 300w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1024w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 150w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 768w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1536w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1080w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1280w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 980w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 480w" data-sizes="auto" sizes="261px" srcset="https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1920w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 300w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1024w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 150w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 768w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1536w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1080w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1280w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 980w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 480w"><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1920w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 300w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1024w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 150w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 768w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1536w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1080w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 1280w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 980w, https://www.herbalist.ml/img/products/pipas/rainbow-pipe.jpg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828" data-eio="l" /></noscript></span></div>
+                                                <div class="et_pb_blurb_container">
+                                                    <h2 class="et_pb_module_header"><span>Rainbow pipe</span></h2>
+
+                                                    <div class="et_pb_blurb_description">
+                                                        <p class="custom-btn-price"><strong>₡8.000</strong></p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50670408383/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg" style="top: 89.5469px; left: 143.312px;"></span>
+                                                            </a>
+                                                        </p>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough">
+
+
+                                        <div class="et_pb_module et_pb_blurb et_pb_blurb_2  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                            <div class="et_pb_blurb_content">
+                                                <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg" alt="" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827 lazyautosizes ls-is-cached lazyloaded et-animated" data-src="https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 300w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 150w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 768w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 980w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 480w" data-sizes="auto" sizes="261px" srcset="https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 300w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 150w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 768w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 980w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 480w"><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1920w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 300w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1024w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 150w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 768w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1536w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1080w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 1280w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 980w, https://www.herbalist.ml/img/products/pipas/the-fish-scale-pipe-4in-15140811636815_5000x.jpeg 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827" data-eio="l" /></noscript></span></div>
+                                                <div class="et_pb_blurb_container">
+                                                    <h2 class="et_pb_module_header"><span>THE FISH SCALE PIPE</span></h2>
+                                                    <div class="et_pb_blurb_description">
+                                                        <p class="custom-btn-price"><strong>₡6.000</strong> <span class="cs-sold-out">agotado</span> </p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="#">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_6  et_pb_css_mix_blend_mode_passthrough et-last-child">
+
+
+                                        <div class="et_pb_module et_pb_blurb et_pb_blurb_3  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
+
+
+                                            <div class="et_pb_blurb_content">
+                                                <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="960" height="960" src="https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg" alt="" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783 lazyautosizes ls-is-cached lazyloaded et-animated" data-src="https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 960w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 300w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 150w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 768w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 480w" data-sizes="auto" sizes="261px" srcset="https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 960w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 300w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 150w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 768w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 480w"><noscript><img width="960" height="960" src="https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg" alt="" srcset="https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 960w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 300w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 150w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 768w, https://www.herbalist.ml/img/products/pipas/2-in-1-silicone-pipe-4-5in-14370481111119_5000x.jpeg 480w" sizes="(max-width: 960px) 100vw, 960px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783" data-eio="l" /></noscript></span></div>
+                                                <div class="et_pb_blurb_container">
+                                                    <h2 class="et_pb_module_header"><span>2 EN 1 SILICONE PIPE</span></h2>
+                                                    <div class="et_pb_blurb_description">
+                                                        <p class="custom-btn-price"><strong>₡9.500</strong></p>
+                                                        <p class="custom-btn-comprar">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50670408383/?text=">
+                                                                <span class="text">Comprar</span>
+                                                                <span class="bg"></span>
+                                                            </a>
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    </div>
+
+
                                 </div>
+
+
+
+
+
+
+
+
 
 
 
