--- a/shop/clothing/index.html
+++ b/shop/clothing/index.html
@@ -543,7 +543,7 @@
                                     <div class="et_pb_with_border et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Ropa 420</h1></div>
+                                                <div class="et_pb_text_inner"><h1>Ropa</h1></div>
                                             </div>
 
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
