--- a/index.html
+++ b/index.html
@@ -342,6 +342,10 @@
                                 <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/cultivo/">Cultivo</a>
                             </div>
 
+                            <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
+                                <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/ropa/">Ropa</a>
+                            </div>
+
                               <div class="et_pb_button_module_wrapper et_pb_button_11_tb_header_wrapper  et_pb_module ">
                                 <a class="et_pb_button et_pb_button_11_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/accesorios/">Accesorios</a>
                             </div>
