--- a/shop/ropa/index.html
+++ b/shop/ropa/index.html
@@ -549,7 +549,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        Muestra tu amor por el cannabis con confianza con nuestra colección de ropa de 420. Diseñada con los diseños más exclusivos pensados para la comodidad y el estilo, nuestra ropa 420 es perfecta para cualquier ocasión.
+                                                        Muestra tu amor por el cannabis con confianza con nuestra colección de ropa 420. Diseñada con los diseños más exclusivos pensados para la comodidad y el estilo, nuestra ropa 420 es perfecta para cualquier ocasión.
                                                 </h4>
                                                 </div>
                                             </div>
