--- a/index.html
+++ b/index.html
@@ -597,13 +597,13 @@
                                         </div>
                                     </div><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/accesorios/fast-weight-fuzion-digital-mini-scale-7334666076239_400x.jpg?v=1628130835" alt="tana" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/clothing/TIE-DYE-BLUE-RED_540x.jpeg" alt="tana" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">₡12.000</h5>
+                                                <h5 class="deal-cat">₡13.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">Tana - Mini báscula digital</h3>
+                                            <h3 class="deals-tit">MEDIAS TIE DYE "PURPS CREW"</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Pesa tu hierba con la mejor precisión.</h6>
                                             </div>
