--- a/index.html
+++ b/index.html
@@ -584,13 +584,13 @@
 
                                     <div class="et_pb_text_inner"><div class="client-reviews embarc_deals_info"><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/pipas/herbalist-mini-pipe.jpg" alt="pipas de vidrio" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/clothing/ALIENEYESHoodiesforCannabisLovers_540x.png" alt="pipas de vidrio" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
-                                                <h5 class="deal-cat">₡5.000</h5>
+                                                <h5 class="deal-cat">₡34.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">Mini Pipa</h3>
+                                            <h3 class="deals-tit">ABRIGO DE ALIEN</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Una pieza clásica compacta, robusta y versátil.</h6>
                                             </div>
