--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                                             </div>
                                             <h3 class="deals-tit">ABRIGO DE ALIEN</h3>
                                             <div class="deal-store-sec">
-                                                <h6 class="deals-store">Una pieza clásica compacta, robusta y versátil.</h6>
+                                                <h6 class="deals-store">Nuestra ropa 420 es perfecta para cualquier ocasión</h6>
                                             </div>
                                         </div>
                                     </div><div class="deals-info row">
@@ -605,7 +605,7 @@
                                             </div>
                                             <h3 class="deals-tit">MEDIAS TIE DYE "PURPS CREW"</h3>
                                             <div class="deal-store-sec">
-                                                <h6 class="deals-store">Pesa tu hierba con la mejor precisión.</h6>
+                                                <h6 class="deals-store">Muestra tu amor por el cannabis con confianza</h6>
                                             </div>
                                         </div>
                                     </div><div class="deals-info row">
