--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                             <div class="deal-category-sec">
                                                 <h5 class="deal-cat">₡34.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">ABRIGO DE ALIEN</h3>
+                                            <h3 class="deals-tit">ABRIGO DE ALIEN 👽</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Nuestra ropa 420 es perfecta para cualquier ocasión</h6>
                                             </div>
