--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 
                                     <p>
                                         <span>
-                                            ¡Bienvenido a Herbalist Smoke Shop!, el mejor lugar para encontrar su kit 420 listo para cualquier ocasión. Nuestros kits para stoners lo mantienen abastecido en todo momento con todos los accesorios para fumar que pueda necesitar, sin que tenga que preocuparse por quedarse sin boletas o su pipa para fumar.<br><br>
+                                            ¡Bienvenido a Herbalist Smoke Shop!, la mejor smoke shop online para encontrar su kit 420 listo para cualquier ocasión. Nuestros kits para stoners lo mantienen abastecido en todo momento con todos los accesorios para fumar que pueda necesitar, sin que tenga que preocuparse por quedarse sin boletas o su pipa para fumar.<br><br>
 
 Con Herbalist Smoke Shop, es fácil participar en nuestro servicio de suscripción que elimina la necesidad de tener que hacer una carrera nocturna de última hora a la tienda para comprar los accesorios para fumar que necesita, organizar su fiesta o socializar con amigos en espera mientras usted sale a hacer su mandado. Esté siempre preparado con las herramientas que necesita a mano para pasar un buen rato, gracias a Herbalist Smoke Shop. Nuestros accesorios para fumar de última generación y alta calidad están diseñados específicamente para que los usuarios como usted duren un mes entero antes de que llegue el próximo Kit.<br><br>
 
