--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -441,6 +441,16 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner"><h1>Herramientas para el cultivo de cannabis</h1></div>
                                             </div>
+
+                                            <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
+                                                <div class="et_pb_text_inner">
+                                                    <h4>
+                                                        Si quieres cultivar en los meses de frío o simplemente no tienes las condiciones para un cultivo exterior, lo que necesitas es un indoor. Un indoor es una carpa o un cuarto de cultivo con iluminación artificial donde las plantas crecen en un ambiente ideal. 
+                                                    </h4>
+                                                </div>
+                                            </div>
+
+
                                         </div>
                                     </div>
 
