--- a/index.html
+++ b/index.html
@@ -580,9 +580,9 @@
                                     <div class="et_pb_module et_pb_text et_pb_text_6  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                        <!--<div class="et_pb_text_inner"><h2>Deals <span class="float-right-text">
+                                        <div class="et_pb_text_inner"><h2>Deals <span class="float-right-text">
                                             <a href="#">View All &gt;&gt;&gt;</a></span></h2>
-                                        </div>-->
+                                        </div>
 
 
                                     </div><div class="et_pb_module et_pb_divider et_pb_divider_0 et_pb_divider_position_ et_pb_space"><div class="et_pb_divider_internal"></div></div><div class="et_pb_module et_pb_text et_pb_text_7  et_pb_text_align_left et_pb_bg_layout_light">
