--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
                                     <div class="et_pb_module et_pb_text et_pb_text_6  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                        <div class="et_pb_text_inner"><h2>Deals <span class="float-right-text">
-                                            <a href="#">View All &gt;&gt;&gt;</a></span></h2>
+                                        <div class="et_pb_text_inner"><h2>Ropa para los amantes del cannabis <span class="float-right-text">
+                                            <a href="https://www.herbalist.ml/shop/ropa/">Ver toda la ropa &gt;&gt;&gt;</a></span></h2>
                                         </div>
 
 
