--- a/index.html
+++ b/index.html
@@ -616,13 +616,13 @@
                                         </div>
                                     </div><div class="deals-info row">
                                         <div class="deals-image">
-                                            <img src="https://www.herbalist.ml/img/products/clothing/TIE-DYE-PEACE_540x.jpeg" alt="medias cannabis 420" class="img-responsive"/>
+                                            <img src="https://www.herbalist.ml/img/products/clothing/camisa-weed.jpg" alt="medias cannabis 420" class="img-responsive"/>
                                         </div>
                                         <div class="deals-details">
                                             <div class="deal-category-sec">
                                                 <h5 class="deal-cat">₡13.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">MEDIAS TIE DYE "PEACE CREW"</h3>
+                                            <h3 class="deals-tit">Camisa</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Hechas con los diseños más exclusivos pensados para la comodidad y el estilo</h6>
                                             </div>
