--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                                             <div class="deal-category-sec">
                                                 <h5 class="deal-cat">₡13.000</h5>
                                             </div>
-                                            <h3 class="deals-tit">Camisa</h3>
+                                            <h3 class="deals-tit">Camisa "The bud"</h3>
                                             <div class="deal-store-sec">
                                                 <h6 class="deals-store">Hechas con los diseños más exclusivos pensados para la comodidad y el estilo</h6>
                                             </div>
