--- a/shop/index.html
+++ b/shop/index.html
@@ -523,7 +523,7 @@ heateor_sss_vertical_sharing{
                                                         <p>
                                                             Las pipas de vidrio son la forma más práctica y rápida para fumar hierba. La mayoría de nuestras pipas están sopladas a mano y vienen en colores y diseños especiales.
                                                         </p>
-                                                        <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="" >Explorar colección</a>
+                                                        <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="" >Ver más &gt;&gt;&gt;</a>
                                                     </div>
                                                 </div><div class="shop-module">
                                                     <div class="shop-content">
@@ -534,7 +534,7 @@ heateor_sss_vertical_sharing{
                                                         <p>
                                                             En nuestra tienda encontrarás tu próximo bong o pipa! Tenemos muchos tipos de pipas y bongs a la venta.
                                                         </p>
-                                                        <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="">Explorar colección</a></div>
+                                                        <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="">Ver más &gt;&gt;&gt;</a></div>
                                                 </div>
                                                     <div class="shop-module">
                                                         <div class="shop-content">
@@ -545,7 +545,7 @@ heateor_sss_vertical_sharing{
                                                             <p>
                                                                 Si bien el vapeo ha existido durante años, recientemente se ha disparado en popularidad como una forma más pura y saludable de disfrutar el fumado sin la necesidad de fumar a combustión.
                                                             </p>
-                                                            <a class="more" href="https://www.herbalist.ml/shop/vapes/" target="">Explorar colección</a>
+                                                            <a class="more" href="https://www.herbalist.ml/shop/vapes/" target="">Ver más &gt;&gt;&gt;</a>
                                                         </div>
                                                     </div><div class="shop-module">
                                                         <div class="shop-content">
@@ -556,7 +556,7 @@ heateor_sss_vertical_sharing{
                                                             <p>
                                                                 El grinder es una de las herramientas más importantes que puede tener cualquier stoner. Para moler esas hierbas secas y hacerlas perfectas para un humo suave, se necesita un grinder fuerte.
                                                             </p>
-                                                            <a class="more" href="https://www.herbalist.ml/shop/picadoras/" target="">Explorar colección</a>
+                                                            <a class="more" href="https://www.herbalist.ml/shop/picadoras/" target="">Ver más &gt;&gt;&gt;</a>
                                                         </div>
                                                     </div>
                                                 </div>
