--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                                                            </div>-->
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/volcan.jpg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/kanye-west-weed-herbalist.jpeg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
