--- a/shop/index.html
+++ b/shop/index.html
@@ -447,9 +447,9 @@ heateor_sss_vertical_sharing{
                                                     </div>-->
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg);">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping2.jpg);">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2>Herbalist Kit por solo $49.99</h2>
+                                                                    <h2>Accesorios premium</h2>
                                                                     <a class="more btn btn--black" target="" href="https://wa.me/50670408383/?text=">
                                                                         <span class="text">Shop</span>
                                                                         <span class="bg"></span>
