--- a/shop/index.html
+++ b/shop/index.html
@@ -56,7 +56,7 @@ heateor_sss_vertical_sharing{
     <meta name="description" content="Herbalist es la smoke shop en línea de confianza con envío gratuito, devoluciones instantáneas y atención al cliente de primer nivel. Compre bongs de agua, pipas, vaporizadores y otros accesorios para fumar" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/" />
 
-    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/ico.png" />
+    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/leaf.png" />
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
