--- a/shop/index.html
+++ b/shop/index.html
@@ -1400,7 +1400,7 @@ heateor_sss_vertical_sharing{
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                         BIENVENIDO A HERBALIST SMOKE SHOP 🌋 WELCOME TO HERBALIST SMOKE SHOP 🌋 BIENVENIDO A HERBALIST SMOKE SHOP 🌋 WELCOME TO HERBALIST SMOKE SHOP 🌋 BIENVENIDO A HERBALIST SMOKE SHOP
+                                            HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • ACCESORIOS 4:20
                                         </p>
                                     </div>
                                 </div>
