--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                                                         <div class="owl-slider item"> 
                                                             <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/photo-1569272312655-56e340c5c0c6.jpeg);">
                                                                 <div class="slider-content et_pb_row">
-                                                                    <h2 class="custom-slider-text herbalist-kit">Best smoking essentials</h2>
+                                                                    <h2 class="custom-slider-text herbalist-kit">Con los mejores accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
                                                                         <span class="text">Order Now</span>
                                                                         <span class="bg">Smoking essentials</span>
