--- a/shop/index.html
+++ b/shop/index.html
@@ -1481,7 +1481,7 @@ heateor_sss_vertical_sharing{
 
                                 <a href="https://www.herbalist.ml/">
                             <span class="et_pb_image_wrap ">
-                            <img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="smoke shop costa rica" title="logo" class="wp-image-16" />
+                            <img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="smoke shop costa rica" title="logo" class="wp-image-16" />
                             </span>
                                 </a>
 
