--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -328,6 +328,10 @@
                                 <a class="et_pb_button et_pb_button_11_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/accesorios/">Accesorios</a>
                             </div>
 
+                            <div class="et_pb_button_module_wrapper et_pb_button_11_tb_header_wrapper  et_pb_module ">
+                                <a class="et_pb_button et_pb_button_11_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/ropa/">Ropa</a>
+                            </div>
+
                             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
                                 <a href="https://wa.me/50670408383/?text=" target="_blank" style="color: black !important;">
                                     <i class="fab fa-whatsapp sap-icon"></i>
