--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                        <span class="text">Order Now</span>
+                                                                        <span class="text">Ordenar ahora</span>
                                                                         <span class="bg"> </span>
                                                                     </a>
 
@@ -445,7 +445,7 @@
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Con los mejores accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
-                                                                        <span class="text">Order Now</span>
+                                                                        <span class="text">Ordenar ahora</span>
                                                                         <span class="bg">Smoking essentials</span>
                                                                     </a>
                                                                 </div>
