--- a/shop/index.html
+++ b/shop/index.html
@@ -281,7 +281,7 @@ heateor_sss_vertical_sharing{
 
                         <div class="et_pb_column et_pb_column_1_3 et_pb_column_5_tb_header  et_pb_css_mix_blend_mode_passthrough">
                             <div class="et_pb_module et_pb_image et_pb_image_1_tb_header">
-                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/ig-logo.jpg" alt="herbalist smoke shop logo" title="logo" class="wp-image-16" /></span></a>
+                                <a href="https://www.herbalist.ml/"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/full-herbalist-logo-png.png" alt="smoke shop" title="logo" class="wp-image-16" /></span></a>
                             </div>
                         </div>
 
